# speech-recognition-service

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/api/: endpoints.py
backend/src/api/v1/: speech_recognition.py
backend/src/schemas/enums/: model_list.py
backend/src/schemas/requests/: whisper_model.py
backend/src/schemas/responses/: transcribe.py
backend/src/services/speech_recognition/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: requests.ts
frontend/src/components/: ButtonComponent.tsx  DragAndDropComponent.tsx  SelectComponent.tsx  TextAreaComponent.tsx
frontend/src/pages/: MainPage.tsx
src/: main.py
src/api/v1/: html.py  webpage.py
src/schemas/enums/: model_list.py
